# veil-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: publish.yml
src/: error.rs  lib.rs
src/chains/: mod.rs
src/chains/ethereum/: constants.rs  mod.rs  payloads.rs  validate.rs
src/chains/solana/: constants.rs  payloads.rs  validate.rs
src/client/: client.rs  mod.rs
src/intent/: builder.rs  intent.rs  mod.rs  payload.rs  serialize.rs  sign.rs
src/signer/: mod.rs  signer.rs
src/types/: chain.rs  mod.rs  nonce.rs  signature.rs
tests/: acceptance.rs  client.rs  error.rs  intent.rs  intent_hash_tests.rs  intent_serialization_tests.rs  mock_signer_tests.rs  serialize.rs  sign.rs  signed_intent_tests.rs
