[package]
name = "veil-sdk"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A portable execution language for intent-based Solana transactions — build, sign, and submit intents without holding keys"
license = "Apache-2.0"
repository = "https://github.com/Interveil/veil-sdk"
documentation = "https://docs.rs/veil-sdk"
keywords = ["solana", "blockchain", "intent", "transaction", "sdk"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
bincode = "1.3"
blake3 = "1"
reqwest = { version = "0.12", features = ["blocking", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
